@@ -852,7 +852,11 @@ Addr setup_client_stack( void*  init_sp,
                               | 0x04000000ULL   /* TAR */
                               | 0x04000000ULL   /* VEC_CRYPTO */
                               | 0x00800000ULL   /* ARCH_3_00 */
+#if defined(VGP_ppc64le_linux)
+   /* Should also be supported on ppc64be,
+      but see https://bugs.kde.org/show_bug.cgi?id=469097  */
                               | 0x00100000ULL   /* PPC_FEATURE2_SCV */
+#endif
                               | 0x00400000ULL   /* HAS_IEEE128 */
                               | 0x00200000ULL   /* PPC_FEATURE2_DARN */
                               | 0x00040000ULL   /* ARCH_3_1 */
