@@ -188,6 +188,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
 468401  [PATCH] Add a style file for clang-format
 468556  Build failure for vgdb
 468606  build: remove "Valgrind relies on GCC" check/output
+469097  ppc64(be) doesn't support SCV syscall instruction
 n-i-bz  FreeBSD rfork syscall fail with EINVAL or ENOSYS rather than VG_(unimplemented)
 
 To see details of a given bug, visit
